8303466: C2: failed: malformed control flow. Introducing SubINoUnderflowNode